<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8ABF6"
    tools:context=".SegundaActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="212dp"
        android:layout_height="52dp"
        android:layout_marginTop="80dp"
        android:text="@string/SegundaScreenText"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:text="@string/usuario"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="---"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Textedad"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="---"
        app:layout_constraintStart_toStartOf="@+id/textViewEdad"
        app:layout_constraintTop_toBottomOf="@+id/textViewEdad" />

    <TextView
        android:id="@+id/textViewEdad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/texto_localidad"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/localidad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="---"
        app:layout_constraintStart_toStartOf="@+id/textViewEdad2"
        app:layout_constraintTop_toBottomOf="@+id/textViewEdad2" />

    <Button
        android:id="@+id/btnNavegar"
        android:layout_width="165dp"
        android:layout_height="80dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/ButtonSegundaActivityNav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
